--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,36 +1,46 @@
-name: Generate Snake Contribution Graph
+name: Generate Snake Animation
 
 on:
   schedule:
-    # 每天 UTC 0:00 运行一次
-    - cron: "0 0 * * *"
+    # 每4小时自动更新一次动画
+    - cron: "0 */4 * * *"
+  # 手动触发
   workflow_dispatch:
+  # 代码更新时触发
   push:
-    branches:
-      - main
-      - master
+    branches: [main]
 
 jobs:
   generate:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
-
+    
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Generate Snake
+        uses: actions/checkout@v3
+        
+      - name: Generate Snake Animation
         uses: Platane/snk@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          # 黑色主题（支持浅色和深色）
+          github_user_name: ${{ secrets.GH_USERNAME }}
+          # 输出文件路径
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-
-      - name: Push to Output Branch
-        uses: crazy-max/ghaction-github-pages@v4
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            ./github-contribution-grid-snake.svg
+            ./github-contribution-grid-snake-dark.svg
+      
+      - name: Commit and Push
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # 添加新生成的文件
+          git add ./github-contribution-grid-snake*.svg
+          
+          # 检查是否有文件变更
+          if git diff --cached --stat | grep -q .; then
+            git commit -m "🐍 Update snake animation"
+            git push
+            echo "✅ Snake animation updated"
+          else
+            echo "ℹ️ No changes to snake animation"
+          fi
